# lint-diffs

./: .gitignore  .lint_diffs  .pylintrc  .travis.yml  LICENSE  Makefile  README.md  conftest.py  default_config  lint_diffs.py  pylint_diffs.py  pyproject.toml  requirements.txt
lint_diffs/: __init__.py  default_config
test/: badcode.js  badcode.py  test_lintr.py
